[package]
name = "uinput"
version = "0.2.0"
authors = ["Andrew Korovkin <positiveway05@gmail.com>"]

description = "Send mouse and keyboard events on any distro and X11 or Wayland"
keywords = ["linux", "input", "mouse", "keyboard", "control"]
readme = "README.md"
repository = "https://github.com/positiveway/uinput-rs"

[dependencies]
libc = "0.2"
ioctl-sys = "0.8.0"
nix = "0.26.2"
udev = "^0.7.0"
