[package]
name = "mouse-keyboard-input"
version = "0.2.3"
authors = ["Andrew Korovkin <positiveway05@gmail.com>"]

description = "Send mouse and keyboard events on any distro and X11 or Wayland"
keywords = ["linux", "input", "mouse", "keyboard", "control"]
readme = "README.md"
license = "MIT OR Apache-2.0"

repository = "https://github.com/positiveway/mouse-keyboard-input"

[dependencies]
libc = "0.2"
ioctl-sys = "0.8.0"
nix = "0.26.2"
