[package]
name = "mouse-keyboard-input"
version = "0.5.2"
authors = ["Andrew Korovkin <positiveway05@gmail.com>"]
edition = "2021"

description = "Send mouse and keyboard events on any distro and X11 or Wayland"
keywords = ["linux", "input", "mouse", "keyboard", "control"]
readme = "README.md"
license = "MIT OR Apache-2.0"

repository = "https://github.com/positiveway/mouse-keyboard-input"

[features]
default = ["auto-acquire-permissions"]
auto-acquire-permissions = []

[dependencies]
crossbeam-channel = "0.5"
libc = "0.2"
ioctl-sys = "0.8"
nix = "0.28"
